--- a/tools/meson.build
+++ b/tools/meson.build
@@ -4,6 +4,7 @@ compare_nm = files('compare_nm.py')
 compare_time = files('compare_time.py')
 gdb_hw_script = files('gdb_stm32.sh')
 qemu_test_runner = files('qemu_test_runner.py')
+validate_generator_runner = files('validate_generator_runner.py')
 dump_cmds = files('dump_cmds.py')
 gcc_version = files('gcc_version.py') # drop, when https://github.com/mesonbuild/meson/issues/7166 is resolved
 
