CheckGraph: add new step

--- a/ara/steps/native/meson.build
+++ b/ara/steps/native/meson.build
@@ -72,6 +72,7 @@ step_mod = py3_inst.extension_module('step',
         'fake_entry_point.cpp',
         'fn_single_exit.cpp',
         'callgraph.cpp',
+        'check_graph.cpp',
         'ir_reader.cpp',
         'ir_writer.cpp',
         'llvm_map.cpp',
