libs/meson: do not use OSEK
OSEK is deprecated in favour of AUTOSAR

--- a/libs/meson.build
+++ b/libs/meson.build
@@ -6,7 +6,7 @@ subdir('platform')
 subdir('include')
 subdir('sra')
 subdir('freertos')
-subdir('osek')
+# subdir('osek')
 subdir('autosar')
 
 libs_targets += libsra_ar
