SSE: activate task1/c-g
The tests produce the correct SSTG but the (automatic) validation is
incomplete yet.

--- a/appl/AUTOSAR/meson.build
+++ b/appl/AUTOSAR/meson.build
@@ -48,11 +48,11 @@ autosar_apps = [
   ['singlecore' / 'bcc1' / 'sse1',      ['c', 'system.json']],
   ['singlecore' / 'bcc1' / 'task1',     ['a', 'system.json', 'a.trace.json']],
   ['singlecore' / 'bcc1' / 'task1',     ['b', 'system.json', 'b.trace.json']],
-  ['singlecore' / 'bcc1' / 'task1',     ['c', 'system.json']],
-  ['singlecore' / 'bcc1' / 'task1',     ['d', 'system.json']],
-  ['singlecore' / 'bcc1' / 'task1',     ['e', 'system.json']],
-  ['singlecore' / 'bcc1' / 'task1',     ['f', 'system.json']],
-  ['singlecore' / 'bcc1' / 'task1',     ['g', 'system.json']],
+  ['singlecore' / 'bcc1' / 'task1',     ['c', 'system.json', 'c.trace.json']],
+  ['singlecore' / 'bcc1' / 'task1',     ['d', 'system.json', 'd.trace.json']],
+  ['singlecore' / 'bcc1' / 'task1',     ['e', 'system.json', 'e.trace.json']],
+  ['singlecore' / 'bcc1' / 'task1',     ['f', 'system.json', 'f.trace.json']],
+  ['singlecore' / 'bcc1' / 'task1',     ['g', 'system.json', 'g.trace.json']],
   ['singlecore' / 'bcc1' / 'task2',     ['a', 'system.json']],
   ['singlecore' / 'bcc1' / 'task2',     ['b', 'system.json']],
   ['singlecore' / 'bcc1' / 'task2',     ['c', 'system.json']],
